--- a/css/style.css
+++ b/css/style.css
@@ -1602,3 +1602,7 @@ input[type="radio"]+label {
 .map-popup-show {
     display: block;
 }
+.map{
+  background-image: url(../img/map.jpg);
+  background-size: cover;
+}
